Add functionality to add note

--- a/client/main.html
+++ b/client/main.html
@@ -3,13 +3,48 @@
 </head>
 
 <body>
+  <nav class="red">
+    <div class="container">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Note Manager</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li class="nav-item">
+            <a href="#addmodal" class="waves-effect waves-light btn modal-trigger">Add Note</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="container">
       <h1>Welcome to Meteor!</h1>
-      {{> note }}
+      <ul class="collection">
+        {{#each notes}}
+          {{> note }}
+        {{/each}}
+      </ul>
   </div>
-</body>
 
+  {{> add}}
+
+<script>
+  $(document).ready(function(){
+    $('.modal').modal();
+  });
+</script>
+</body>
+ 
 <template name="note">
-  <li class="collection-items">My Note</li>
+  <li class="collection-item">{{ text }}</li>
+</template>
+
+<template name="add">
+   <div id="addmodal" class="modal">
+      <div class="modal-content">
+        <h3>Add Note</h3>
+        <form action="" class="add-form">
+           <input type="text" name="text" id="" placeholder="Add note">
+        </form>
+      </div>
+    </div>
 </template>
 
