Add authentication system

--- a/client/main.html
+++ b/client/main.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a href="#addmodal" class="waves-effect waves-light btn modal-trigger">Add Note</a>
           </li>
+          <li class="nav-item">
+            {{> loginButtons}}
+          </li>
         </ul>
       </div>
     </div>
