Only owners of note will be able to delete notes

--- a/client/main.html
+++ b/client/main.html
@@ -9,9 +9,11 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Note Manager</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+          {{#if currentUser}}
           <li class="nav-item">
             <a href="#addmodal" class="waves-effect waves-light btn modal-trigger">Add Note</a>
           </li>
+          {{/if}}
           <li class="nav-item">
             {{> loginButtons}}
           </li>
@@ -20,12 +22,16 @@
     </div>
   </nav>
   <div class="container">
-      <h1>Welcome to Meteor!</h1>
+      <h1>Welcome</h1>
+      {{#if currentUser}}
       <ul class="collection">
         {{#each notes}}
           {{> note }}
         {{/each}}
       </ul>
+      {{else}}
+      <p>Login to manage notes</p>
+      {{/if}}
   </div>
 
   {{> add}}
@@ -38,7 +44,7 @@
 </body>
  
 <template name="note">
-  <li class="collection-item">{{ text }}
+  <li class="collection-item">{{ text }}:  <strong>Added by {{username}}</strong>
     <a href="#" class="delete-note secondary-content">
       <i class="material-icons">close</i>
     </a>
